wip: use jigsaw